# ESS-conditions-indirect-reciprocity-with-noise

./: .gitignore  AllNorms.hpp  CMakeLists.txt  Game.hpp  GameWithPunishment.hpp  L6_L3_payoff_difference.cpp  Norms.hpp  NormsWithPunishment.hpp  README.md  equalizers_norms.cpp  leading_eight_ESS_with_errors.cpp  main_nash_search_with_P.cpp  test_game.cpp  test_game_with_punishment.cpp  test_norms.cpp  test_norms_with_punishment.cpp
Data/: README.md
Figures/: README.md
scripts/: README.md  generate_figure_equalizers.py  generate_figure_l3_l6_payoffs.py  generate_figure_l8_errors.py  generate_figures.py
